# shellfirm

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  build.sh  shellfirm.plugin.sh  shellfirm.plugin.zsh
shellfirm/: Cargo.toml  build.rs
shellfirm/checks/: aws.yaml  azure.yaml  base.yaml  database.yaml  docker.yaml  flyio.yaml  fs-strict.yaml  fs.yaml  gcp.yaml  git-strict.yaml  git.yaml  github.yaml  heroku.yaml  kubernetes-strict.yaml  kubernetes.yaml  mongodb.yaml  mysql.yaml  netlify.yaml  network.yaml  npm.yaml  psql.yaml  redis.yaml  shell.yaml  terraform.yaml  vercel.yaml
shellfirm/src/: agent.rs  audit.rs  blast_radius.rs  challenge.rs  checks.rs  config.rs  context.rs  data.rs  dialog.rs  env.rs  error.rs  lib.rs  llm.rs  mcp.rs  policy.rs  prompt.rs  wrap.rs
shellfirm/src/snapshots/: shellfirm__checks__test_checks__can_check_custom_filter_with_file_exists-2.snap  shellfirm__checks__test_checks__can_check_custom_filter_with_file_exists.snap  shellfirm__checks__test_checks__can_check_custom_filter_with_str_contains-2.snap  shellfirm__checks__test_checks__can_check_custom_filter_with_str_contains.snap  shellfirm__checks__test_checks__can_check_is_contains-2.snap  shellfirm__checks__test_checks__can_check_is_regex_match-2.snap  shellfirm__checks__test_checks__can_check_is_regex_match.snap  shellfirm__checks__test_checks__can_check_is_start_with-2.snap  shellfirm__checks__test_checks__can_check_is_start_with.snap  shellfirm__checks__test_checks__can_get_all_checks.snap  shellfirm__checks__test_checks__can_is_match_contains-2.snap  shellfirm__checks__test_checks__can_is_match_contains.snap  shellfirm__checks__test_checks__can_is_match_start_with-2.snap  shellfirm__checks__test_checks__can_run_check_on_command-2.snap  shellfirm__checks__test_checks__can_run_check_on_command.snap  shellfirm__checks__test_checks__is_match_command-2.snap  shellfirm__checks__test_checks__is_match_command-3.snap  shellfirm__checks__test_checks__is_match_command.snap  shellfirm__config__test_config__can_add_check_groups-2.snap  shellfirm__config__test_config__can_add_checks_group-2.snap  shellfirm__config__test_config__can_add_checks_group.snap  shellfirm__config__test_config__can_backup-2.snap  shellfirm__config__test_config__can_backup.snap  shellfirm__config__test_config__can_crate_new_config-2.snap  shellfirm__config__test_config__can_crate_new_config.snap  shellfirm__config__test_config__can_create_config_folder-2.snap  shellfirm__config__test_config__can_create_default_config_file-2.snap  shellfirm__config__test_config__can_create_default_config_file.snap  shellfirm__config__test_config__can_get_default_checks.snap  shellfirm__config__test_config__can_load_config_from_file.snap  shellfirm__config__test_config__can_load_default_config.snap  shellfirm__config__test_config__can_manage_config_file-2.snap  shellfirm__config__test_config__can_manage_config_file-3.snap  shellfirm__config__test_config__can_manage_config_file.snap  shellfirm__config__test_config__can_remove_check_groups.snap  shellfirm__config__test_config__can_remove_checks_group-2.snap  shellfirm__config__test_config__can_remove_checks_group-3.snap  shellfirm__config__test_config__can_remove_checks_group.snap  shellfirm__config__test_config__can_reset_config-2.snap  shellfirm__config__test_config__can_reset_config-3.snap  (+20 more)
shellfirm/src/tui/: app.rs  badges.rs  check_form.rs  check_store.rs  draft.rs  mod.rs  preview.rs  render.rs  style.rs  validate.rs
shellfirm/src/tui/tabs/: ai.rs  (+9 more)
shellfirm/src/wrap/: common.rs  mod.rs  unix.rs  windows.rs
shellfirm/tests/: checks.rs  decision_matrix.rs  escalation_matrix_proptest.rs  per_mode_resolution.rs  pure_logic.rs  sandboxed_integration.rs  tui_app.rs
shellfirm/tests/checks/: aws.yaml  azure.yaml  base-bash_fork_bomb.yaml  base-delete_all_cron_tasks.yaml  base-reboot_machine.yaml  base-shutdown_machine.yaml  base.yaml  base:execute_all_history_commands.yaml  database.yaml  docker.yaml  flyio.yaml  fs-blockdev_disk_modify.yaml  fs-dd_advanced_disk_write.yaml  fs-dd_block_device.yaml  fs-delete_find_files.yaml  fs-encryption_operations.yaml  fs-fdisk_disk_modify.yaml  fs-filesystem_backup.yaml  fs-flush_file_content.yaml  fs-gdisk_disk_modify.yaml  fs-lvm_operations.yaml  fs-mkfs_format.yaml  fs-mount_operations.yaml  fs-move_to_dev_null.yaml  fs-parted_disk_modify.yaml  fs-partprobe_disk_update.yaml  fs-recursively_chmod.yaml  fs-recursively_delete.yaml  fs-sfdisk_disk_modify.yaml  fs-strict-any_deletion.yaml  fs-strict-change_permissions.yaml  fs-strict-folder_deletion.yaml  fs-strict:any_deletion.yaml  fs.yaml  fs:recursively_delete.yaml  gcp.yaml  git-bisect.yaml  git-cherry_pick.yaml  git-clean_force.yaml  git-delete_all.yaml  (+71 more)
shellfirm/tests/decisions/: matrix.yaml
shellfirm/tests/snapshots/: checks__.__tests__checks__base-bash_fork_bomb.yaml.snap  checks__.__tests__checks__base-delete_all_cron_tasks.yaml.snap  checks__.__tests__checks__base-execute_all_history_commands.yaml.snap  checks__.__tests__checks__base-reboot_machine.yaml.snap  checks__.__tests__checks__base-shutdown_machine.yaml.snap  checks__.__tests__checks__base:bash_fork_bomb.yaml.snap  checks__.__tests__checks__base:delete_all_cron_tasks.yaml.snap  checks__.__tests__checks__base:execute_all_history_commands.yaml.snap  checks__.__tests__checks__base:reboot_machine.yaml.snap  checks__.__tests__checks__base:shutdown_machine.yaml.snap  checks__.__tests__checks__fs-delete_find_files.yaml.snap  checks__.__tests__checks__fs-flush_file_content.yaml.snap  checks__.__tests__checks__fs-move_to_dev_null.yaml.snap  checks__.__tests__checks__fs-recursively_chmod.yaml.snap  checks__.__tests__checks__fs-recursively_delete.yaml.snap  checks__.__tests__checks__fs-strict-any_deletion.yaml.snap  (+103 more)
shellfirm/tmp/: add-checks.yaml  default.yaml  save-from-struct.yaml
shellfirm_core/: Cargo.toml  README.md  build.rs
shellfirm_core/src/: checks.rs  command.rs  errors.rs  filters.rs  lib.rs  wasm.rs
shellfirm_core/tests/: test_yaml_checks.rs  test_yaml_coverage.rs
(+195 files in other folders)
