[package]
name = "shellfirm"
documentation = "`shellfirm` will intercept any risky patterns (default or defined by you) and prompt you a small challenge for double verification, kinda like a captcha for your terminal."
version = "0.1.1"
edition = "2021"
authors = ["Elad-Kaplan <kaplan.elad@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaplanelad/shellfirm"
homepage = "https://github.com/kaplanelad/shellfirm"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={ version = "3.0.0-rc.7", features = ["cargo"] }
home = "0.5.3"
anyhow = "1.0.51"
serde = "1.0"
serde_yaml = "0.8.21"
serde_derive="1.0.131"
regex = "1.5"
rayon = "1.5.1"
rand = "0.8.4"
colored = "2.0.0"
log="0.4.14"
env_logger="0.9.0"

[build-dependencies]
anyhow = "1.0.51"