[package]
name = "shellfirm"
description = "`shellfirm` will intercept any risky patterns (default or defined by you) and prompt you a small challenge for double verification, kinda like a captcha for your terminal."
version = "0.3.0"
edition = "2021"
authors = ["Elad-Kaplan <kaplan.elad@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/kaplanelad/shellfirm"
homepage = "https://github.com/kaplanelad/shellfirm"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["cargo"], optional = true }
clap_complete = { version = "4.5", optional = true }
clap_complete_nushell = { version = "4.5", optional = true }
dirs = "6.0"
anyhow = "1.0"
serde = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
serde_regex = "1.1"
regex = "1.12"
rayon = "1.11"
rand = "0.10"
log = "0.4"
env_logger = "0.11"
console = "0.16"
exitcode = "1.1"
requestty = "0.6"
wait-timeout = "0.2"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], optional = true }
tokio = { version = "1", features = ["rt", "macros", "time", "io-std", "io-util"], optional = true }
uuid = { version = "1", features = ["v4"] }
strsim = "0.11"
nix = { version = "0.29", features = ["term", "signal", "process", "poll", "fs"], optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
insta = { version = "1.46", features = ["filters"] }
tempfile = "3"

[build-dependencies]
anyhow = "1.0"

[features]
default = ["all"]
cli = ["clap", "clap_complete", "clap_complete_nushell"]
llm = ["reqwest"]
mcp = ["tokio"]
ai = ["mcp", "llm"]
wrap = ["nix", "libc"]
all = ["cli", "llm", "mcp", "ai", "wrap"]

[[bin]]
name = "shellfirm"
required-features = ["cli"]
