[package]
name = "shellfirm_core"
version = "0.1.0"
edition = "2021"
authors = ["Elad-Kaplan <kaplan.elad@gmail.com>"]
license = "MIT"
description = "Core validation engine for shellfirm - WASM compatible"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies - WASM compatible
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_regex = { workspace = true }
regex = "1.10"
thiserror = { workspace = true }
strum = { workspace = true, features = ["derive"] }

[dev-dependencies]
rstest = { version = "0.26" }

# WASM-specific dependencies
[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["console"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.wee_alloc]
version = "0.4"
optional = true

# Build dependencies
[build-dependencies]
# keep build script free of extra deps

[features]
default = []
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "web-sys",
    "console_error_panic_hook",
    "wee_alloc",
]

# WASM-specific configuration
[package.metadata.wasm-pack.profile.release]
wee-alloc = false
